<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home_nav"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/search_nav"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/trolly_nav"
        android:title="@string/cart"
        android:icon="@drawable/trolly"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/setting_nav"
        android:title="@string/setting"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"
        />

</menu>