<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/login_to_nfind_the_best_food"
        android:textColor="#FBB436"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tvlogin"
        android:layout_marginTop="3dp"
        >

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"

            />

        <EditText
            android:id="@+id/etemailLP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableEnd="@drawable/email"
            android:ems="12"
            android:inputType="textEmailAddress"
            android:hint="xyz@gmail.com"
            />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            />



        <EditText
            android:id="@+id/etPasswordLP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textWebPassword"
            android:drawableEnd="@drawable/lock"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />




        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btnloginLP"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#FBB436"
            android:text="@string/login"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            />

        <Button
            android:id="@+id/btnsignupLP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="#000000"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>