<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/sign_up"
        android:textColor="#FBB436"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvsignup"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvsignup"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvfirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/amiko"
                android:text="@string/full_name"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etfullnameRP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/landing_page"
                android:ems="12"
                android:inputType="text"

                />

            <TextView
                android:id="@+id/tvemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/amiko"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etemailRP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/email"
                android:ems="12"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:id="@+id/tvphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/amiko"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etphoneRP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/smartphone"
                android:ems="12"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/amiko"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPasswordRP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/lock"
                android:ems="12"
                android:inputType="textWebPassword"
                />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            
            <Button
                android:id="@+id/btnsignupRP"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#FBB436"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:cornerRadius="10dp" />


            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll1"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="#1B1A1A"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnloginRP"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>






    <!--    <LinearLayout-->
    <!--        android:id="@+id/ll5"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/ll4"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:orientation="horizontal">-->

    <!--        <Button-->
    <!--            android:id="@+id/btnGoogle"-->
    <!--            style="@style/Widget.AppCompat.Button.Borderless"-->
    <!--            android:layout_width="73dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            />-->

    <!--        <Button-->
    <!--            android:id="@+id/btnFacebook"-->
    <!--            style="@style/Widget.AppCompat.Button.Borderless"-->
    <!--            android:layout_width="90dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            />-->

    <!--        <Button-->
    <!--            android:id="@+id/btnTwitter"-->
    <!--            style="@style/Widget.AppCompat.Button.Borderless"-->
    <!--            android:layout_width="90dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            />-->
    <!--    </LinearLayout>-->







</RelativeLayout>